# thesis_uaic_ws

./: README.md
franka_aic/: CMakeLists.txt
franka_aic/include/franka_aic/: AIC_controller.h
franka_aic/launch/: AIC_controller.launch
franka_aic/src/: AIC_controller.cpp  AIC_controller_unbiased_backup.cpp  AIC_controller_unbiased_backup_original_tuning.cpp  AIC_controller_unbiased_js.cpp
franka_aic/src/backup/: AIC_controller_backup.cpp  AIC_controller_backup_js.cpp  AIC_controller_js.cpp  AIC_controller_unbiased_js.cpp  AIC_controller_unbiased_taskspace.cpp
move_panda/: CMakeLists.txt  package.xml
move_panda/launch/: egrocery_dynamic_task.launch  egrocery_stataic_task.launch  egrocery_static_task.launch  test_dynamic_task.launch  test_static_task.launch
move_panda/src/: hoovering_tp.py  movePanda.cpp  movePanda_simple.cpp  static_egrocery_task.cpp  test_static_task.py  timer.py
move_panda/src/gripper_control/: sketch_ros_arduino.ino
object_detection/: CMakeLists.txt  package.xml
object_detection/scripts/: object_tracking_dynamic.py  object_tracking_dynamic_pub.py  object_tracking_static.py  object_tracking_static_pub.py  test_base_tf.py  tracker.py
object_detection/scripts/camera_calibration/: calibration_capture.py  camera_calibration.py  camera_calibration2.py
predictor/src/: prediction_handler_or_path_planner.cpp  predictor3d.cpp
